# quantized

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: pythonpublish.yml  run_tests.yml
None/quantized/basis/get_expansion_coeffs/: func_code.py
None/quantized/utils/pairwise_array_from_func/62c07f2518b47d3a9c6189f6a57e51b0/: metadata.json  output.pkl
None/quantized/utils/pairwise_array_from_func/c55d129dbbd568f9278367a89346b5e4/: metadata.json  output.pkl
docs/: LICENSE.md  Makefile  README.md  about.md  apidoc.md  citing.md  contribute.md  extra.css  getting-started.md  index.md  make.bat  readme.ipynb  requirements.txt  requirements_doc.txt
docs/.quantized/cache/quantized/basis/get_expansion_coeffs/: func_code.py
docs/None/quantized/utils/pairwise_array_from_func/: func_code.py
docs/api_docs/: atom.md  basis.md  config.md  elements.md  generate.py  hopping_matrix.md  molecule.md  operators.md  potentials.md  time_evolution.md  utils.md  validation.md
docs/source/: api_reference.rst  conf.py  index.rst  installation.rst  table_of_contents.rst  tutorials.rst
docs/source/_templates/: bootstrap_globaltoc.html  genindex_sidebar.html  modules_sidebar.html  tutorials_sidebar.html
docs/source/modules/: transit_chem.basis.rst  transit_chem.some_module.rst
docs/source/tutorials/: example.ipynb  get_matrices.ipynb  oned_basis.ipynb  operators.ipynb  triple_well.ipynb
docs/tutorials/: all.ipynb  get_matrices.ipynb  oned_basis.ipynb  operators.ipynb  time_dependence.ipynb  time_independent.ipynb  transition_matrix.ipynb  triple_well.ipynb
quantized/: __init__.py  atom.py  attr_wrapped.py  basis.py  cli.py  config.py  constants.py  elements.py  hopping_matrix.py  molecule.py  operators.py  plotting.py  potentials.py  time_evolution.py  utils.py  validation.py
tests/: test_atom.py  test_basis.py  test_cli.py  test_config.py  test_constants.py  test_element.py  test_molecule.py  test_oned.py  test_operators.py  test_plotting.py  test_transit_chem.py  test_utils.py  test_validation.py  utils.py
transit_chem/: __init__.py  __main__.py  atom.py  basis.py  cli.py  config.py  constants.py  elements.py  hopping_matrix.py  molecule.py  oneD.py  operators.py  plotting.py  potentials.py  setup.py  threeD.py  time_evolution.py  transit.py  transittimeanalyzer.py  units.py  utils.py  validation.py
transit_chem/some_module/: __init__.py
(+21 files in other folders)
